// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="Default Button"
/>
`;

exports[`should render as disabled 1`] = `
<Button
  className="button-group-button is-disabled"
  isBlock={false}
  isCompact={false}
  isDisabled={true}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="Disabled"
/>
`;

exports[`should render with icon only 1`] = `
<Button
  className="button-group-button"
  icon={
    <img
      alt="icon"
    />
  }
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isIconOnly={true}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="Icon Only"
/>
`;

exports[`should render with onBlur 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onBlur"
/>
`;

exports[`should render with onClick 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onClick"
/>
`;

exports[`should render with onFocus 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onFocus"
/>
`;

exports[`should render with onKeyDown 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onKeyDown"
/>
`;

exports[`should render with onKeyUp 1`] = `
<Button
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isIconOnly={false}
  isReversed={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  text="onKeyUp"
/>
`;
